docs/v0.5.0/1-getting-started/overview.mdx
---
title: Overview
order: 0
default: true
---

**FRPC** (or **Frisbee RPC**), is an <Tooltip text={"Remote Procedure Call"} content={"RPC"}/> Framework (similar to [GRPC](https://grpc.io) or
[Apache Thrift](https://thrift.apache.org/)) that uses the [Frisbee](/frisbee/overview) messaging framework as its underlying transport mechanism.

We built <Tooltip text={"Frisbee RPC"} content={"FRPC"}/> because we loved the idea of defining our message types in a standardized
[proto3](https://developers.google.com/protocol-buffers/docs/proto3) format and having the [protobuf](https://github.com/protocolbuffers/protobuf) compiler generate all the necessary
glue code for us, but we didn't like the [overhead](https://github.com/boguslaw-wojcik/encoding-benchmarks) of encoding and decoding
messages in the <Tooltip text={"Data format used to serialize structured data"} content={"protobuf"}/> format, and wanted a wire protocol that was lighter than <Tooltip text={"Wire format used for GRPC"} content={"HTTP\/2"}/>.

<Tooltip text={"Frisbee RPC"} content={"FRPC"} /> works by making use of protobuf
plugins, and allows developers to use their existing proto3 files to generate a full
RPC Framework that uses Frisbee under the hood. Furthermore, FRPC is a **drop-in
replacement for GRPC** thanks to its generated interfaces matching GRPC's, and in
an apples-to-apples comparison it [outperforms existing RPC frameworks](/performance/grpc-benchmarks)
by a significant margin.

# FRPC vs Frisbee

It's important to note the distinction between FRPC and Frisbee. FRPC uses proto3 files to generate client and server
implementations that use the Frisbee framework under the hood. This is why FRPC is so performant compared to other RPC
frameworks - the Frisbee messaging framework and wire protocol are lightweight and extremely optimized.

At its core, **Frisbee** is best described as a `bring-your-own-protocol{:.keyword}` messaging framework. Our goal was
to make it possible for developers to define their **own** messaging patterns and protocols, and have the actual
lower-level implementations done for them by the library.

<Note content="A simple way to understand this is to think of FRPC as a Request/Reply protocol, and Frisbee as the low-level implementation of that protocol. With Frisbee you can implement any protocol or pattern you'd like, but since Request/Reply is so common FRPC allows you to implement that specific pattern very quickly and easily." />

# Getting started with FRPC

Over the next few pages we'll walk you through the process of getting started with <Tooltip text={"Frisbee RPC"} content={"FRPC"}/>,
from defining your message types in a <Tooltip text={"Syntax used to describe protocol buffers"} content={"proto3"}/> file, to writing your first server and client.

We'll also introduce the core concepts around Frisbee as well as how you can use the Framework to build your own custom messaging protocols.
